using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public sealed class AnimationHash
{
    public static readonly int _speedHash = Animator.StringToHash("speed");
    public static readonly int _isCutting = Animator.StringToHash("isCutting");
    public static readonly int _getHit = Animator.StringToHash("getHit");
    public static readonly int _isWalking = Animator.StringToHash("isWalking");
    public static readonly int _think = Animator.StringToHash("think");
    public static readonly int _isChasing = Animator.StringToHash("isChasing");
    public static readonly int _attack = Animator.StringToHash("attack");
    public static readonly int _isDefensing = Animator.StringToHash("isDefensing");
    public static readonly int _isDizzying = Animator.StringToHash("isDizzying");
    public static readonly int _isDead = Animator.StringToHash("isDead");
    public static readonly int _useSkill = Animator.StringToHash("useSkill");

}
